<resources>
    <string name="app_name">다온</string>
    <string name="title_home">홈</string>
    <string name="title_allMeeting">전체 모임</string>
    <string name="title_allFeed">피드 보기</string>
    <string name="title_myPage">내정보</string>

    // home
    <string name="good_morning">👋 굿모닝!</string>
    <string name="profile_name">김다온</string>
    <string name="home_explain">언제 어디서나, 코디네이터와 함꼐 베리어프리된 여가\n모임 앱 다온과 함께 공연 관람, 여행 등을 다양하게\n즐기세요.</string>
    <string name="home_more">더 보기</string>
    <string name="home_available_meeting_tv">참여 가능한 추천 모임</string>
    <string name="sort_condition_1">정렬 기준1</string>
    <string name="sort_condition_2">정렬 기준2</string>

    //item_meeting
    <string name="meeting_location">대구 수성</string>
    <string name="meeting_date">2023-06-07</string>
    <string name="meeting_time">10:30</string>
    <string name="meeting_tag1">시각</string>
    <string name="meeting_tag2">음악</string>
    <string name="meeting_title">생명 사랑 음악회</string>
    <string name="meeting_explain">시각장애인 5인조 밴드의 악보 없는 음악회\n에 초대합니다. 사랑 가득한 선율을 마음껏\n 느낄...</string>
    <string name="meeting_avail_member">정원</string>
    <string name="meeting_member">10</string>
    <string name="meeting_member_unit">명</string>
    <string name="meeting_original_price">32,000</string>
    <string name="meeting_price">16,000</string>
    <string name="meeting_price_unit">원</string>

    //allMeeting
    <string name="allmeeting_category_all">전체활동</string>
    <string name="allmeeting_category_arts"> 예술활동</string>
    <string name="allmeeting_category_viewing_art">예술관람</string>
    <string name="allmeeting_category_sports">운동활동</string>
    <string name="allmeeting_category_viewing_sports">운동관람</string>
    <string name="allmeeting_category_etc">기타활동</string>

    //allFeed
    <string name="allfeed_nickname">해맑은 유미</string>
    <string name="allfeed_introduce">한줄소개글 표시..</string>
    <string name="allfeed_date">2023-06-07</string>
    <string name="allfeed_time">10:30</string>
    <string name="allfeed_context">Feugiat in feugiat mauris malesuada quis est\n sodales adipiscing.
        Tellus tincidunt Odio ultrices\n nibh sed accumsan. In donec felis sagittis tempus.\n
        Elit, enim, et arcu at ultrices cursus arcu dictum\n purus...</string>
    <string name="allfeed_tag">\@양욱진 첼로 리사이클링 공연</string>
    <string name="allfeed_title">Post title goes here...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>