<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/meeting_thumbnail"
        android:layout_width="96dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/meeting_sample1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/meeting_location"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/meeting_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/meeting_date"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/meeting_time"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/meeting_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/meeting_time"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_tag1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_meeting_tag1"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/meeting_tag1"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/meeting_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_tag2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_meeting_tag2"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/meeting_tag2"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintStart_toEndOf="@+id/meeting_tag1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/meeting_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/meeting_detail"
        app:layout_constraintStart_toEndOf="@+id/meeting_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/meeting_tag1" />

    <TextView
        android:id="@+id/meeting_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/meeting_explain"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/meeting_thumbnail" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/participate_member_sample"
        app:layout_constraintStart_toEndOf="@+id/meeting_thumbnail"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:gravity="center"
        android:text="@string/meeting_avail_member"
        android:textColor="#333333"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/meeting_detail" />

    <TextView
        android:id="@+id/meeting_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/meeting_member"
        android:textColor="#333333"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/meeting_detail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/meeting_member_unit"
        android:textColor="#333333"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/meeting_member"
        app:layout_constraintTop_toBottomOf="@+id/meeting_detail" />

    <TextView
        android:id="@+id/meeting_original_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/meeting_original_price"
        android:textColor="#FF1717"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/meeting_detail" />

    <TextView
        android:id="@+id/meeting_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/meeting_price"
        android:textColor="#333333"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/meeting_original_price"
        app:layout_constraintTop_toBottomOf="@+id/meeting_detail" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/meeting_price_unit"
        android:textColor="#333333"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/meeting_price"
        app:layout_constraintTop_toBottomOf="@+id/meeting_detail" />

    <TextView
        android:id="@+id/review_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="예정"
        android:textColor="#333333"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/meeting_something"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="2023년 6월 8일"
        android:textColor="@color/text"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/main_button_enabled_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_stars" />

</androidx.constraintlayout.widget.ConstraintLayout>