<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/allfeed_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/allfeed_date"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/allfeed_nickname"
        app:layout_constraintEnd_toStartOf="@+id/allfeed_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/allfeed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/allfeed_time"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/allfeed_profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/feed_profile_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allfeed_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/allfeed_nickname"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/allfeed_profile_img"
        app:layout_constraintStart_toEndOf="@+id/allfeed_profile_img" />

    <TextView
        android:id="@+id/allfeed_introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/allfeed_introduce"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/allfeed_profile_img"
        app:layout_constraintStart_toEndOf="@+id/allfeed_profile_img"
        app:layout_constraintTop_toTopOf="@+id/allfeed_nickname" />

    <TextView
        android:id="@+id/allfeed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/allfeed_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allfeed_introduce" />


    <ImageButton
        android:id="@+id/allfeed_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:src="@drawable/ic_allfeed_like_btn"
        app:layout_constraintEnd_toStartOf="@+id/allfeed_more"
        app:layout_constraintTop_toBottomOf="@+id/allfeed_date" />

    <ImageButton
        android:id="@+id/allfeed_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:src="@drawable/ic_allfeed_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allfeed_date" />

    <ImageView
        android:id="@+id/allfeed_img"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:scaleType="fitXY"
        android:src="@drawable/all_meeting_img3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allfeed_title" />

    <TextView
        android:id="@+id/allfeed_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:text="@string/allfeed_context"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allfeed_img" />

    <TextView
        android:id="@+id/allfeed_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/allfeed_tag"
        android:textColor="@color/mainColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allfeed_context" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/main_button_enabled_stroke"
        app:layout_constraintTop_toBottomOf="@+id/allfeed_tag" />

</androidx.constraintlayout.widget.ConstraintLayout>